#    - enhancement: don't alert for interfaces OperStatus going to "up"
#    - fix: vlan column moved to the correct place
#    - enhancement: avoid global perfdata to be returned in case of initial
#      run or no history, as the perfdata are wrong and produce drops on 
#      graphs
#    - enhancement: rewrite the plugin to follow the nagios plugin development 
#      guidelines:
# 	   * use of "use warnings"
#         => second review, protected lots of undefined variables
#    - enhancement: added excludeportperf and includeportperf, allowing 
#      to filter which tracked interfaces generates performance data
#    - fix/enhancement: port performance data now depend on what data are 
#      available. ex: unrouted vlans doesn't have ifOctetIn... statistics
#    - enhancement: last traffic calculation a bit cleaned and commented for
#      better maintenance
#    - fix: corrected and completed physical interface pattern matching in
#      check_for_unused_interfaces
#    - fix: readded 'regexp' option (previously missed)
#    - fix: cachedir/statedir naming including hostquery
#    - fix: never ignore case in options
#    - enhancement: reviewed the way the ports are counted. based on the 
#      speed property availability, this seems to permit a correct counting 
#      for most of the possible nodes (cisco, windows, linux, ...)
#   ----------------------------------------------------------------------
#
#
# ========================================================================
# 	TODO list:
# 	 - option to enable change tracking for interfaces going from down to up
# 	 - add GetSnmpWalkxxxxx -> use of get_table and evaluate performances
# 	   against the use of unix snmpwalk
# 	 - review the nagios plugin development guidelines to see if it fits now
#       * use warnings
#       * use strict
# 	 - pnp6 templates update
#    - snmp v2c / v3 support
# ========================================================================